# grimoire5e

./: .gitignore  CHANGELOG.md  LICENSE  MCDM Productions; Flee, Mortals!.json  README.md  app.py  main.py  pyproject.toml  styles.css  test_data_loader.py
.claude/: settings.local.json
data/bestiary/: bestiary-fm.json
grimoire/: app.py  sources.json  styles.css  themes.py
grimoire/models/: __init__.py  class_feature.py  item.py  monster.py
grimoire/services/: data_loader.py  sources.py
grimoire/views/: __init__.py  class_feature_detail.py  class_features.py  feat_detail.py  feats.py  item_detail.py  items.py  manage_sources.py  monster_detail.py  monsters.py  quick_search.py  rules.py  settings.py  setup_wizard.py  spell_detail.py  spells.py  upload_source.py
models/: __init__.py  base.py  condition.py  feat.py  item.py  monster.py  spell.py
services/: __init__.py  data_loader.py  search.py  sources.py
views/: __init__.py  base.py  condition_detail.py  conditions.py  feat_detail.py  feats.py  item_detail.py  items.py  monster_detail.py  monsters.py  quick_search.py  settings.py  spell_detail.py  spells.py
