[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grimoire5e"
version = "0.1.0"
description = "D&D 5th Edition reference TUI"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
grimoire = "grimoire.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["grimoire"]

[tool.hatch.build.targets.wheel.force-include]
"grimoire/styles.css" = "grimoire/styles.css"
"grimoire/sources.json" = "grimoire/sources.json"
